fix: ensure not show scrollbar on transaction table

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,15 @@ body {
   text-shadow: 1px 1px 2px black;
 }
 
+.notShowScrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.notShowScrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
